--- a/teams.html
+++ b/teams.html
@@ -203,7 +203,7 @@
             <ul class="player-list">
                 <li class="captain"><span class="player-number">🏆</span><span class="player-name">Vinod Aripaka</span></li>
                 <li><span class="player-number">🎾</span><span class="player-name">Gopi Guru</span></li>
-                <li><span class="player-number">🎾</span><span class="player-name">Venus</span></li>
+                <li><span class="player-number">🎾</span><span class="player-name">Venu Servepalli</span></li>
                 <li><span class="player-number">🎾</span><span class="player-name">Nazeer Mohammed</span></li>
                 <li><span class="player-number">🎾</span><span class="player-name">Naveenkumar Mohanram</span></li>
                 <li><span class="player-number">🎾</span><span class="player-name">Nizam Karimudeen</span></li>
