--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
     <button id="menuBtn" class="menu-btn" aria-expanded="false" aria-controls="siteNav" aria-label="Toggle Menu">☰</button>
   </div>
   <nav id="siteNav" class="nav" aria-label="Primary">
-    <a href="teams.html" aria-current="page">👥 Teams</a>
-    <a href="index.html">📅 Schedule</a>
+    <a href="index.html">👥 Teams</a>
+    <a href="schedule.html" aria-current="page">📅 Schedule</a>
     <a href="rules.html">📋 Rules</a>
     <a href="standings.html">📊 Standings</a>
   </nav>
@@ -160,25 +160,25 @@
     <div class="grid">
       <div class="p-card">
         <div class="p-head">Qualifier 1</div>
-        <div class="p-date">Friday, Jan 9 • 5:00 PM</div>
+        <div class="p-date">Friday, Jan 16 • 5:00 PM</div>
         <div class="p-match">Top 1 vs Top 2</div>
         <div class="tags"><span class="tag w">W → Final</span><span class="tag l">L → Q2</span></div>
       </div>
       <div class="p-card">
         <div class="p-head">Eliminator</div>
-        <div class="p-date">Saturday, Jan 10 • 5:00 PM</div>
+        <div class="p-date">Saturday, Jan 17 • 5:00 PM</div>
         <div class="p-match">Top 3 vs Top 4</div>
         <div class="tags"><span class="tag w">W → Q2</span><span class="tag e">L → Out</span></div>
       </div>
       <div class="p-card">
         <div class="p-head">Qualifier 2</div>
-        <div class="p-date">Friday, Jan 16 • 5:00 PM</div>
+        <div class="p-date">Friday, Jan 23 • 5:00 PM</div>
         <div class="p-match">Q1 Loser vs Elim Winner</div>
         <div class="tags"><span class="tag w">W → Final</span><span class="tag e">L → Out</span></div>
       </div>
       <div class="p-card final">
         <div class="p-head">Championship Final</div>
-        <div class="p-date">Saturday, Jan 17 • 5:00 PM</div>
+        <div class="p-date">Saturday, Jan 31 • 5:00 PM</div>
         <div class="p-match">Q1 Winner vs Q2 Winner</div>
         <div class="tags"><span class="tag w">🏆 Champion</span></div>
       </div>
@@ -187,74 +187,74 @@
 </main>
 
 <script>
-  // Data (dates use format like: Oct 10 (Fri) – Oct 11 (Sat))
+  // Data (dates shifted +7 days from original: Oct 10→17, Oct 17→24, etc.)
   const scheduleData = [
-    { week: 1, dates: "Oct 10 (Fri) – Oct 11 (Sat)", matches: [
+    { week: 1, dates: "Oct 17 (Fri) – Oct 18 (Sat)", matches: [
       { teams:["Karna's Crusaders","Court Conquerors"], captains:["Srikanth","Rajasekhar Chintha"], day:"FRI", time:"5:00 PM" },
       { teams:["Spin Kings","Mega Lions"], captains:["Uma V","Anil Kunda"], day:"FRI", time:"6:00 PM" },
       { teams:["KOC Challengers","Chill Titans"], captains:["Narayan Prasad","Satish Orugunta"], day:"SAT", time:"5:00 PM" },
       { teams:["Rally Squad","Agni Aces"], captains:["Manish Jangid","Vinod Aripaka"], day:"SAT", time:"6:00 PM" }
     ], bye: "Rally Royals" },
 
-    { week: 2, dates: "Oct 17 (Fri) – Oct 18 (Sat)", matches: [
+    { week: 2, dates: "Oct 24 (Fri) – Oct 25 (Sat)", matches: [
       { teams:["Rally Royals","Court Conquerors"], captains:["Yogesh","Rajasekhar Chintha"], day:"FRI", time:"5:00 PM" },
       { teams:["Spin Kings","Chill Titans"], captains:["Uma V","Satish Orugunta"], day:"FRI", time:"6:00 PM" },
       { teams:["KOC Challengers","Agni Aces"], captains:["Narayan Prasad","Vinod Aripaka"], day:"SAT", time:"5:00 PM" },
       { teams:["Rally Squad","Mega Lions"], captains:["Manish Jangid","Anil Kunda"], day:"SAT", time:"6:00 PM" }
     ], bye: "Karna's Crusaders" },
 
-    { week: 3, dates: "Oct 24 (Fri) – Oct 25 (Sat)", matches: [
+    { week: 3, dates: "Oct 31 (Fri) – Nov 1 (Sat)", matches: [
       { teams:["Rally Royals","Karna's Crusaders"], captains:["Yogesh","Srikanth"], day:"FRI", time:"5:00 PM" },
       { teams:["Court Conquerors","Mega Lions"], captains:["Rajasekhar Chintha","Anil Kunda"], day:"FRI", time:"6:00 PM" },
       { teams:["KOC Challengers","Rally Squad"], captains:["Narayan Prasad","Manish Jangid"], day:"SAT", time:"5:00 PM" },
       { teams:["Agni Aces","Chill Titans"], captains:["Vinod Aripaka","Satish Orugunta"], day:"SAT", time:"6:00 PM" }
     ], bye: "Spin Kings" },
 
-    { week: 4, dates: "Oct 31 (Fri) – Nov 1 (Sat)", matches: [
+    { week: 4, dates: "Nov 7 (Fri) – Nov 8 (Sat)", matches: [
       { teams:["Rally Royals","Spin Kings"], captains:["Yogesh","Uma V"], day:"FRI", time:"5:00 PM" },
       { teams:["Karna's Crusaders","Mega Lions"], captains:["Srikanth","Anil Kunda"], day:"FRI", time:"6:00 PM" },
       { teams:["Court Conquerors","Rally Squad"], captains:["Rajasekhar Chintha","Manish Jangid"], day:"SAT", time:"5:00 PM" },
-      { teams:["Rally Squad","Chill Titans"], captains:["Manish Jangid","Satish Orugunta"], day:"SAT", time:"6:00 PM" }
+      { teams:["Agni Aces","Chill Titans"], captains:["Vinod Aripaka","Satish Orugunta"], day:"SAT", time:"6:00 PM" }
     ], bye: "KOC Challengers" },
 
-    { week: 5, dates: "Nov 7 (Fri) – Nov 8 (Sat)", matches: [
+    { week: 5, dates: "Nov 14 (Fri) – Nov 15 (Sat)", matches: [
       { teams:["Rally Royals","KOC Challengers"], captains:["Yogesh","Narayan Prasad"], day:"FRI", time:"5:00 PM" },
       { teams:["Karna's Crusaders","Spin Kings"], captains:["Srikanth","Uma V"], day:"FRI", time:"6:00 PM" },
       { teams:["Court Conquerors","Agni Aces"], captains:["Rajasekhar Chintha","Vinod Aripaka"], day:"SAT", time:"5:00 PM" },
       { teams:["Mega Lions","Chill Titans"], captains:["Anil Kunda","Satish Orugunta"], day:"SAT", time:"6:00 PM" }
     ], bye: "Rally Squad" },
 
-    { week: 6, dates: "Nov 14 (Fri) – Nov 15 (Sat)", matches: [
+    { week: 6, dates: "Nov 21 (Fri) – Nov 22 (Sat)", matches: [
       { teams:["Rally Royals","Rally Squad"], captains:["Yogesh","Manish Jangid"], day:"FRI", time:"5:00 PM" },
       { teams:["Karna's Crusaders","KOC Challengers"], captains:["Srikanth","Narayan Prasad"], day:"FRI", time:"6:00 PM" },
       { teams:["Spin Kings","Court Conquerors"], captains:["Uma V","Rajasekhar Chintha"], day:"SAT", time:"5:00 PM" },
-      { teams:["KOC Challengers","Mega Lions"], captains:["Narayan Prasad","Anil Kunda"], day:"SAT", time:"6:00 PM" }
-    ], bye: "Agni Aces" },
-
-    { week: 7, dates: "Nov 21 (Fri) – Nov 22 (Sat)", matches: [
-      { teams:["Rally Royals","Agni Aces"], captains:["Yogesh","Vinod Aripaka"], day:"FRI", time:"5:00 PM" },
-      { teams:["Karna's Crusaders","Rally Squad"], captains:["Srikanth","Manish Jangid"], day:"FRI", time:"6:00 PM" },
-      { teams:["Spin Kings","KOC Challengers"], captains:["Uma V","Narayan Prasad"], day:"SAT", time:"5:00 PM" },
       { teams:["Agni Aces","Mega Lions"], captains:["Vinod Aripaka","Anil Kunda"], day:"SAT", time:"6:00 PM" }
     ], bye: "Chill Titans" },
 
     { break:true, icon:"🦃", text:"Thanksgiving Break", dates:"November 28–29" },
 
-    { week: 8, dates: "Dec 5 (Fri) – Dec 6 (Sat)", matches: [
+    { week: 7, dates: "Dec 5 (Fri) – Dec 6 (Sat)", matches: [
+      { teams:["Rally Royals","Agni Aces"], captains:["Yogesh","Vinod Aripaka"], day:"FRI", time:"5:00 PM" },
+      { teams:["Karna's Crusaders","Rally Squad"], captains:["Srikanth","Manish Jangid"], day:"FRI", time:"6:00 PM" },
+      { teams:["Spin Kings","KOC Challengers"], captains:["Uma V","Narayan Prasad"], day:"SAT", time:"5:00 PM" },
+      { teams:["Court Conquerors","Mega Lions"], captains:["Rajasekhar Chintha","Anil Kunda"], day:"SAT", time:"6:00 PM" }
+    ], bye: "Chill Titans" },
+
+    { week: 8, dates: "Dec 12 (Fri) – Dec 13 (Sat)", matches: [
       { teams:["Rally Royals","Chill Titans"], captains:["Yogesh","Satish Orugunta"], day:"FRI", time:"5:00 PM" },
       { teams:["Karna's Crusaders","Agni Aces"], captains:["Srikanth","Vinod Aripaka"], day:"FRI", time:"6:00 PM" },
       { teams:["Spin Kings","Rally Squad"], captains:["Uma V","Manish Jangid"], day:"SAT", time:"5:00 PM" },
       { teams:["KOC Challengers","Court Conquerors"], captains:["Narayan Prasad","Rajasekhar Chintha"], day:"SAT", time:"6:00 PM" }
     ], bye: "Mega Lions" },
 
-    { week: 9, dates: "Dec 12 (Fri) – Dec 13 (Sat)", matches: [
+    { week: 9, dates: "Dec 19 (Fri) – Dec 20 (Sat)", matches: [
       { teams:["Rally Royals","Mega Lions"], captains:["Yogesh","Anil Kunda"], day:"FRI", time:"5:00 PM" },
       { teams:["Karna's Crusaders","Chill Titans"], captains:["Srikanth","Satish Orugunta"], day:"FRI", time:"6:00 PM" },
       { teams:["Spin Kings","Agni Aces"], captains:["Uma V","Vinod Aripaka"], day:"SAT", time:"5:00 PM" },
-      { teams:["Court Conquerors","Chill Titans"], captains:["Rajasekhar Chintha","Satish Orugunta"], day:"SAT", time:"6:00 PM" }
-    ], bye: "Court Conquerors" },
+      { teams:["KOC Challengers","Court Conquerors"], captains:["Narayan Prasad","Rajasekhar Chintha"], day:"SAT", time:"6:00 PM" }
+    ], bye: "Rally Squad" },
 
-    { break:true, icon:"🎄", text:"Holiday Break", dates:"December 19–20, 26–27 & January 2–3" }
+    { break:true, icon:"🎄", text:"Holiday Break", dates:"December 26–27 & January 2–3" }
   ];
 
   const TEAMS = [
@@ -320,7 +320,7 @@
         const show = (filterTeam==='all' || m.teams.includes(filterTeam));
         if(show) anyVisible = true;
         const dayClass = m.day === 'FRI' ? 'fri' : 'sat';
-        const stamp = stampFor(m.day, m.time, item.dates); // e.g., "10th Oct Fri 5 pm"
+        const stamp = stampFor(m.day, m.time, item.dates);
         return `
           <div class="match ${dayClass} ${show? '': 'hidden'}" data-teams="${m.teams.join(',')}">
             <div class="timebox"><div class="day ${dayClass}">${stamp}</div></div>
