--- a/rules.html
+++ b/rules.html
@@ -61,9 +61,9 @@
     <button id="menuBtn" class="menu-btn">☰</button>
   </div>
   <nav id="siteNav" class="nav">
-    <a href="teams.html">👥 Teams</a>
-    <a href="index.html">📅 Schedule</a>
-    <a href="#" aria-current="page">📋 Rules</a>
+    <a href="index.html">👥 Teams</a>
+    <a href="schedule.html">📅 Schedule</a>
+    <a href="rules.html" aria-current="page">📋 Rules</a>
     <a href="standings.html">📊 Standings</a>
   </nav>
 </header>
