--- a/standings.html
+++ b/standings.html
@@ -142,8 +142,8 @@
   </div>
   <nav id="siteNav" class="nav" aria-label="Primary">
     <!-- Order you asked for: Teams → Schedule → Rules → Standings -->
-    <a href="teams.html">👥 Teams</a>
-    <a href="index.html">📅 Schedule</a>
+    <a href="index.html">👥 Teams</a>
+    <a href="index22.html">📅 Schedule</a>
     <a href="rules.html">📋 Rules</a>
     <a href="standings.html" aria-current="page">📊 Standings</a>
   </nav>
