--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
         <button id="menuBtn" class="menu-btn">☰</button>
     </div>
     <nav id="siteNav" class="nav">
-        <a href="index.html" aria-current="page">👥 Teams</a>
-        <a href="schedule.html">📅 Schedule</a>
+        <a href="teams.html" aria-current="page">👥 Teams</a>
+        <a href="index.html">📅 Schedule</a>
         <a href="rules.html">📋 Rules</a>
         <a href="standings.html">📊 Standings</a>
     </nav>
